# dev_ros1_ws

./: .gitignore  arm.bash  moveit_msgs.msg
devel/: .catkin  .rosinstall  setup.sh
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/lib/aruco_detect/: aruco_detect
devel/lib/camera_calibration_parsers/: convert
devel/lib/camera_info_manager/: unit_test
devel/lib/fiducial_slam/: fiducial_slam
devel/lib/image_transport/: list_transports  republish
devel/lib/jetson_camera/: jetson_camera_node
devel/lib/pkgconfig/: arm_moveit.pc  arm_moveit_1.pc  aruco.pc  aruco_detect.pc  aruco_msgs.pc  aruco_ros.pc  camera_calibration_parsers.pc  camera_info_manager.pc  car.pc  execute.pc  fiducial_msgs.pc  fiducial_slam.pc  image_transport.pc  jetson_camera.pc  moveit.pc  polled_camera.pc  robot_bringup.pc  robot_description.pc  robot_moveit.pc  robot_navigation.pc  serial_communication.pc  vision_msgs.pc
devel/lib/polled_camera/: poller
map/: map.pgm  map.pgm_20210608_221127  map.yaml_20210608_221110  map.yaml_20210608_221127  map_ew.pgm  rtabmap.pgm
src/: arm.bash  mapping.bash  robot.rviz  rtabmap.bash  run.bash  test.bash
src/Thesisgit/: .mxproject  main_backup.txt  testservo2.ioc
src/Thesisgit/Inc/: pca9685.h  pid_controller.h  stm32f4xx_it.h
src/Thesisgit/MDK-ARM/: pcabackup.txt  startup_stm32f407xx.lst  testservo2.uvguix.Lenovo  testservo2.uvoptx  testservo2.uvprojx
src/Thesisgit/SERVO/: SERVO.h  SERVO_cfg.c
src/Thesisgit/Src/: backupmain.txt  main.c  pca9685.c  pid_controller.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_moveit/config/: car.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
src/arm_moveit/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/car/config/: joint_names_car.yaml
src/car/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_61.STL  link_62.STL  link_63.STL  whbl.STL  whbr.STL  whfl.STL  whfr.STL
src/car/urdf/: CMakeLists.txt  car.csv  car.urdf
src/execute/: CMakeLists.txt  setup.py
src/execute/src/: Arm_control_real.py  Arm_moveit.py  Arm_moveit_new.py  Arm_moveit_old.py  PVector.py  Robot.py  UtilitiesMacroAndConstant.py  Vehicle.py  imu_node.py  init_pose.py  key_mapping.py  keyboard_control.py  nav_execute.py  nav_execute_BACKUP_23979.py  nav_execute_LOCAL_23979.py  nav_execute_REMOTE_23979.py  nav_execute_old.py  read_joint_states.py  robot_command.py  robot_control.py  servocontrol.py  test_serial.py  thesis_robot_node.py
src/mpu9250/: mpu9250.ino
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/config/: robot_mapping.rviz
src/robot_bringup/launch/: arm_control.launch  pi_cam.launch  robot_base.launch  robot_imu.launch  robot_keyboard.launch  robot_mapping.launch  robot_remote.launch  (+3 more)
src/robot_moveit/: .setup_assistant  package.xml
src/robot_navigation/: CMakeLists.txt  package.xml
src/serial_communication/: CMakeLists.txt
(+164 files in other folders)
